avances iniciales pantallas y database

--- a/isof/M27_camping/app/src/main/res/values/strings.xml
+++ b/isof/M27_camping/app/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <resources>
     <string name="app_name">Notepad</string>
-    <string name="hint_title">Type title ...</string>
-    <string name="hint_body">Type body ...</string>
-    <string name="button_save">Save</string>
+    <string name="hint_nombre">Nombre de la parcela ...</string>
+    <string name="hint_descripcion">Descripcion de la parcela ...</string>
+    <string name="button_save_parcela">Guardar Parcela</string>
     <string name="empty_not_saved">Note not saved because title is empty.</string>
     <string name="add_note">Add note</string>
     <string name="menu_delete">Delete Note</string>
     <string name="menu_edit">Edit Note</string>
-    <string name="title">Title</string>
-    <string name="body">Body</string>
+    <string name="nombre">Nombre de la parcela</string>
+    <string name="descripcion">Descripción</string>
+    <string name="maxOcupantes">Número máximo de ocupantes</string>
+    <string name="precioPorPersona">Precio por persona</string>
 </resources>
