--- a/isof/M27_camping/app/src/main/res/values/strings.xml
+++ b/isof/M27_camping/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hint_descripcion">Descripcion de la parcela ...</string>
     <string name="button_save_parcela">Guardar Parcela</string>
     <string name="empty_not_saved">Note not saved because title is empty.</string>
-    <string name="add_note">Add note</string>
+    <string name="add_parcela">Añadir Parcela</string>
     <string name="menu_delete">Delete Note</string>
     <string name="menu_edit">Edit Note</string>
     <string name="nombre">Nombre de la parcela</string>
