--- a/isof/M27_camping/app/src/main/res/values/strings.xml
+++ b/isof/M27_camping/app/src/main/res/values/strings.xml
@@ -11,4 +11,13 @@
     <string name="descripcion">Descripción</string>
     <string name="maxOcupantes">Número máximo de ocupantes</string>
     <string name="precioPorPersona">Precio por persona</string>
+    <string name="nomCliente">Nombre del cliente</string>
+    <string name="tlfCliente">Teléfono del cliente</string>
+    <string name="fEntrada">Fecha de entrada</string>
+    <string name="fSalida">Fecha de salida</string>
+    <string name="hint_nomCliente">Nombre y apellidos...</string>
+    <string name="hint_tlfCliente">Teléfono...</string>
+    <string name="button_save_reserva">Guardar Reserva</string>
+    <string name="add_reserva">Añadir Reserva</string>
+
 </resources>
